--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -1,1 +1,19 @@
-browse html
+<ul id ="slides">
+    <% @users.each_with_index do |user,i| %>
+
+        <li class="slide <%= 'showing' if i == 0 %>" data-id="<%= user.id %>">
+             <div class="image-carousel" style="background-image: url('<%= url_for user.images.first%>')">
+             </div>   
+            <div class="user-details">
+               <span class="user-name"> <%= user.first_name%></span>,31<br>
+               <i class="fa fa-graduation-cap mr-1"></i>Job/Studies<br>
+               <i class="fa fa-map-marker mr-3"></i>Location
+            </div>
+        </li>
+    
+    <% end %>
+</ul>   
+<div id="slide-controls">
+    <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
+    <span class="controls" id="approve"><i class="fa fa-heart fa-2x"></i></span>
+</div>
