--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,11 +1,11 @@
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal">Tinder Clone</h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal"><%= link_to "Tinder Clone" , root_path%></h5>
 
       <% if account_signed_in? %>
           <nav class="my-2 my-md-0 mr-md-3">
           <%= link_to "Browse" , browse_path, class:"text-dark mr-3" %>
           <%= link_to "My matches" , "#", class:"text-dark mr-3" %>
-          <%= link_to "Settings" , "#", class:"text-dark " %>
+          <%= link_to "Settings" , edit_account_registration_path, class:"text-dark " %>
         </nav>
 
         <%= link_to "Sign Out", destroy_account_session_path   ,method: :delete,  class:"btn btn-secondary mr-2" %>
