create approve_&_decline route & like Table

--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -5,7 +5,7 @@
              <div class="image-carousel" style="background-image: url('<%= url_for user.images.first%>')">
              </div>   
             <div class="user-details">
-               <span class="user-name"> <%= user.first_name%></span>,31<br>
+               <span class="user-name"> <%= user.username%></span>,31<br>
                <i class="fa fa-graduation-cap mr-1"></i>Job/Studies<br>
                <i class="fa fa-map-marker mr-3"></i>Location
             </div>
