--- a/app/assets/stylesheets/slides.scss
+++ b/app/assets/stylesheets/slides.scss
@@ -2,7 +2,7 @@
     position: relative;
     height: 400px;
     padding: 0px;
-    margin: 0px;
+    margin: 40px 0px;
     list-style-type: none;
   }
   
@@ -14,7 +14,6 @@
     height: 100%;
     opacity: 0;
     z-index: 1;
-    background-color: gray;
 
     font-size: 40px;
     box-sizing: border-box;
@@ -32,7 +31,7 @@
   }
   
   #slide-controls {
-      margin-top: 20px;
+      margin-top: 20px 0 40px;
       width: 100%;
       text-align: center;
 
