--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -1,19 +1,42 @@
-<ul id ="slides">
-    <% @users.each_with_index do |user,i| %>
+<div class="">
+    <div class="row">
+        <div class="col-3 col-md-4 full bg-light">
+        <%= render "layouts/profile_bar" %>
+            <ul class="nav nav-tinder-sidebar ml-3 mt-3 mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-message" role="tab" aria-controls="pills-profile" aria-selected="false">Message</a>
+                </li>
 
-        <li class="slide <%= 'showing' if i == 0 %>" data-id="<%= user.id %>">
-             <div class="image-carousel" style="background-image: url('<%= url_for user.images.first%>')">
-             </div>   
-            <div class="user-details">
-               <span class="user-name"> <%= user.username%></span>,31<br>
-               <i class="fa fa-graduation-cap mr-1"></i>Job/Studies<br>
-               <i class="fa fa-map-marker mr-3"></i>Location
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+                <div class="tab-pane fade show active " id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab"><%= render "browse/matches" %></div>
+                <div class="tab-pane fade ml-3" id="pills-message" role="tabpanel" aria-labelledby="pills-profile-tab"><p>No message to display</p></div>
             </div>
-        </li>
-    
-    <% end %>
-</ul>   
-<div id="slide-controls">
-    <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
-    <span class="controls" id="approve"><i class="fa fa-heart fa-2x"></i></span>
+            
+        </div>
+        <div class="col-9 col-md-8 full bg-danger">
+            <ul id ="slides">
+                <% @users.each_with_index do |user,i| %>
+            
+                    <li class="slide <%= 'showing' if i == 0 %>" data-id="<%= user.id %>">
+                        <div class="image-carousel" style="background-image: url('<%= url_for user.images.first%>')">
+                        </div>   
+                        <div class="user-details">
+                        <span class="user-name"> <%= user.username%></span>,31<br>
+                        <i class="fa fa-graduation-cap mr-1"></i>Job/Studies<br>
+                        <i class="fa fa-map-marker mr-3"></i>Location
+                        </div>
+                    </li>
+                
+                <% end %>
+            </ul>   
+            <div id="slide-controls">
+                <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
+                <span class="controls" id="approve"><i class="fa fa-heart fa-2x"></i></span>
+            </div>
+        </div>
+    </div>
 </div>
