--- a/app/assets/stylesheets/matches.scss
+++ b/app/assets/stylesheets/matches.scss
@@ -15,3 +15,29 @@
         font-weight: bold;
     }
 }
+
+#conversation{
+    display: none;
+    width: 96%;
+    height: 96%;
+    position: absolute;
+    left: 2%;
+    top: 2%;
+    padding: 30px;
+    z-index: 1000;
+    background: #fff;
+
+    .top-bar{
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 20px;
+        margin-top: 30px;
+    }
+
+    .close-conversation{
+        cursor: pointer;
+
+        &:hover{
+            color: #000 !important
+        }
+    }
+}
