--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -17,7 +17,7 @@
             </div>
             
         </div>
-        <div class="col-9 col-md-8 full bg-danger">
+        <div class="col-9 col-md-8 full bg-white">
             <ul id ="slides">
                 <% @users.each_with_index do |user,i| %>
             
@@ -37,6 +37,7 @@
                 <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
                 <span class="controls" id="approve"><i class="fa fa-heart fa-2x"></i></span>
             </div>
+            <%= render "browse/conversation" %>
         </div>
     </div>
 </div>
