--- a/app/assets/stylesheets/matches.scss
+++ b/app/assets/stylesheets/matches.scss
@@ -33,7 +33,7 @@
         margin-top: 30px;
     }
 
-    .close-conversation{
+    #close-conversation{
         cursor: pointer;
 
         &:hover{
