--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -37,7 +37,8 @@
                 <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
                 <span class="controls" id="approve"><i class="fa fa-heart fa-2x"></i></span>
             </div>
-            <%= render "browse/conversation" %>
+            <div id="conversation">
+            </div>
         </div>
     </div>
 </div>
