--- a/app/views/browse/_messages.html.erb
+++ b/app/views/browse/_messages.html.erb
@@ -1,3 +1,24 @@
 <% @messages.each do |message| %>
-    <%= simple_format message.body %>
+    <% if message.persisted? %>
+       <% if message.account_id == current_account.id %>
+            <div class="row mb-2 sent-by-me">
+                <div class="col-sm-10 col-lg-11">
+                    <div class="float-right p-2 rounded conversation-message"
+                        <%= simple_format message.body %>
+                    </div>
+                </div>
+            </div>
+        <% else %>
+            <div class="row mb-2 ">
+                <div class="col-sm-2 col-lg-1 sent-by-match">
+                    <%= image_tag message.account.images.first, class: "rounded-circle", width: "40px", height:"40px" if message.account.images.any?%>
+                </div>
+                <div class="col-sm-10 col-lg-11">
+                    <div class="float-left p-2 rounded conversation-message"
+                        <%= simple_format message.body %>
+                    </div>
+                </div>
+            </div>
+       <% end %>
+    <% end %>
 <% end %>
