--- a/app/assets/stylesheets/slides.scss
+++ b/app/assets/stylesheets/slides.scss
@@ -46,6 +46,7 @@
     margin: 0 auto;
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #dd6d;
   }
   .user-details{
     font-size: 18px;
