--- a/app/assets/stylesheets/matches.scss
+++ b/app/assets/stylesheets/matches.scss
@@ -1,8 +1,9 @@
 .match-tile{
-    width: 150px;
-    height: 150px;
+    width: 135px;
+    height: 135px;
     background-position: center center;
     background-repeat: no-repeat;
+    background-color: #dd6d;
     background-size: cover;
     position: relative;
     cursor: pointer;
