--- a/app/views/browse/_matches.html.erb
+++ b/app/views/browse/_matches.html.erb
@@ -1,9 +1,11 @@
+<div class="row">
     <% @matches.each do |match| %>
         <div class="col-sm-4">
-            <% if match.images.attached? %>
-                <div class="match-tile rounded ml-2 mb-3" data-id="<%= match.id %>" style="background-image: url('<%= url_for match.images.first %>')">
+            
+                <div class="match-tile rounded  " data-id="<%= match.id %>" <% if match.images.attached? %>style="background-image: url('<%= url_for match.images.first %>')"<% end %>>
                     <p class="text-white"><%= match.first_name %></p>
                 </div>
-            <% end %>
+            
         </div>
     <% end %>
+</div>
