--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -25,9 +25,8 @@
                         <div class="image-carousel" style="background-image: url('<%= url_for user.images.first%>')">
                         </div>   
                         <div class="user-details">
-                        <span class="user-name"> <%= user.username%></span>,31<br>
-                        <i class="fa fa-graduation-cap mr-1"></i>Job/Studies<br>
-                        <i class="fa fa-map-marker mr-3"></i>Location
+                        <span class="user-name"> <%= user.username%></span><br>
+                        
                         </div>
                     </li>
                 
