--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,55 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+     <div class="col">
+        <h2 class="text-center">Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div><br>
+          <div class="form-group">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
+          </div><br>
 
-  <div class="field">
-  <%= f.label :username %><br />
-  <%= f.text_field :username %><br><br>
+          <div class="form-group">
+          <%= f.label :username %><br />
+          <%= f.text_field :username,class:"form-control" %><br><br>
+          </div>
+
+          <div class="form-group">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name,class:"form-control"  %><br><br>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :last_name %><br />
+            <%= f.text_field :last_name,class:"form-control" %><br><br>
+          </div>
+
+          <div class="input-group">
+              <%= f.label :images %>
+              <%= f.file_field :images, multiple: true %><br><br>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password",class:"form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control" %>
+          </div>
+
+          <div class="actions">
+            <%= f.submit "Sign up", class:"btn btn-success" %>
+          </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-  <%= f.label :first_name %><br />
-  <%= f.text_field :first_name  %><br><br>
-  </div>
-
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %><br><br>
-  </div>
-
-  <div class="input-group">
-      <%= f.label :images %>
-      <%= f.file_field :images, multiple: true %><br><br>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
