--- a/app/views/browse/browse.html.erb
+++ b/app/views/browse/browse.html.erb
@@ -33,8 +33,8 @@
                 <% end %>
             </ul>   
             <div id="slide-controls">
-                <span class="controls" id="decline"><i class="fa fa-times-circle fa-2x"></i></span>
-                <span class="controls" id="approve"><i class="fas fa-heart fa-2x"></i></span>
+                <button class="controls rounded-circle btn-primary" id="decline">N</button>
+                <button class="controls rounded-circle btn-success" id="approve">Y</button>
             </div>
             <div id="conversation">
             </div>
