validation for user

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
           <div class="form-group">
           <%= f.label :username %><br />
-          <%= f.text_field :username,class:"form-control" %><br><br>
+          <%= f.text_field :username,class:"form-control",required: true %><br><br>
           </div>
 
           <div class="form-group">
